fix: title spacing

--- a/src/components/title/title.less
+++ b/src/components/title/title.less
@@ -11,3 +11,7 @@
 	text-decoration: none;
 	color: @black;
 }
+
+.title__menu-opener {
+	margin-right: @margin-half;
+}
